# FirstFilingsIN

./: .gitignore  FirstFilingsBSE.py  GEMINI.md  README.md  first_filings_archive.json  main.py  pyproject.toml  requirements.txt  sample_output.json
.context/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  DESIGN.md  OVERVIEW.md
.github/workflows/: daily_run.yml
benchmarks/: benchmark_nse_filtering.py
scripts/: check.sh  send_discord_webhook.py
src/first_filings/: bse_client.py  cli.py  config.py  core.py  exchange.py  nse_client.py  retries.py  utils.py
tests/: test_basic.py  test_bse_client_retry.py  test_bse_pagination.py  test_cli.py  test_enrichment.py  test_nse_client_dates.py  test_retries.py  test_utils.py
