[project]
name = "firstfilings"
version = "2.1.0"
description = "BSE First Filings Finder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bse>=3.1.0",
    "click>=8.0.0",
    "nse[server]>=2.0.0",
    "tenacity>=8.0.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[project.scripts]
first-filings = "first_filings.cli:main"


[tool.uv]
package = true
